Ashley is awesome

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,5 +9,8 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
- *= require_tree .
+ *= require ../../../vendor/assets/flat-UI/css/bootstrap.css
+ *= require ../../../vendor/assets/flat-UI/css/flat-ui.css
+ *= require ./cookbooks.css
+ * require_tree .
  */
