--- a/app/assets/stylesheets/cookbooks.css.scss
+++ b/app/assets/stylesheets/cookbooks.css.scss
@@ -1,3 +1,32 @@
 // Place all the styles related to the Cookbooks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+  padding-top: 60px;
+}
+
+h2 {
+  display: inline;
+  position: relative;
+  top: 5px;
+}
+
+.tile {
+  background: none;
+}
+
+ul {
+  list-style: none;
+}
+
+.btn a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.center { 
+  float: none; 
+  margin-left: auto; 
+  margin-right: auto; 
+}
